--- a/assets/default.scss
+++ b/assets/default.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+
 
 * {
   margin: 0;
@@ -19,8 +21,17 @@
 }
 
 .app {
-  background-color: rgb(14, 11, 19);
+background: rgb(46,45,48);
+background: linear-gradient(149deg, rgba(46,45,48,1) 0%, rgba(3,3,3,1) 75%, rgba(3,3,3,1) 100%);
   min-height: 100vh;
+}
+
+.movies-app-title, .movies-app-subtitle {
+  font-weight: 300;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  color: #f5f5f7;
+  text-decoration: none;
 }
 
 .button {
@@ -30,7 +41,7 @@
   padding: 8px 16px;
   background-color: #c92502;
   border: none;
-  color: #fff;
+  color: #f5f5f7;
   border-radius: 4px;
   cursor: pointer;
   transition: 0.3s ease all;
