--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,2 +1,5 @@
 $main-font-color: #f5f5f7;
 $footer-font-color: #cacaca;
+
+$input-border: 1px solid rgba(128, 128, 128, 0.7);
+$input-background-color: rgba(22, 22, 22, 0.7);
